add logo to TAB

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- Main css -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="images/partea_de_susLogo.png"/>
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
