webService GET Curs

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <!-- Main css -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/partea_de_susLogo.png"/>
+    <!-- jQuery and Bootstrap -->
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- Plugins JS -->
+    <script src="js/owl.carousel.min.js"></script>
+    <!-- Custom JS -->
+    <script src="js/script.js"></script>
+    <script src="js/fbLogin.js"></script>
+
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
@@ -459,7 +468,7 @@
                     <p class="text-center">Completeaza campurile de mai jos </p>
                     <p>
                        <!-- <a href="" class="btn btn-block btn-twitter"> <i class="fab fa-twitter"></i>   Login via Twitter</a>-->
-                        <a href="" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Inscriete cu facebook</a>
+                        <a onclick="checkLoginState()" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Inscriete cu facebook</a>
                     </p>
                     <p class="divider-text">
                         <span class="bg-light">OR</span>
@@ -507,7 +516,7 @@
                             <textarea  class="form-control"  rows="4" cols="50"></textarea>
                         </div> <!-- form-group// -->
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
+                            <button type="submit" class="btn btn-primary btn-block"> TestFAcebook  </button>
                         </div> <!-- form-group// -->
                     </form>
                 </article>
@@ -528,13 +537,6 @@
         </small>
     </footer>
 
-    <!-- jQuery and Bootstrap -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <!-- Plugins JS -->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- Custom JS -->
-    <script src="js/script.js"></script>
 
 </body>
 
