--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="list-group-item"><del>Reports and analytics</del></div>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
+                        <a href="curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
                 </div>
                 <div class="card pricing popular">
@@ -103,7 +103,7 @@
                         <div class="list-group-item">Reports and analytics</div>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
+                        <a href="curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
                 </div>
                 <div class="card pricing">
@@ -119,7 +119,7 @@
                         <div class="list-group-item">Web hooks</div>
                     </ul>
                     <div class="card-body">
-                        <a href="#" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
+                        <a href="curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
                 </div>
             </div>
