--- a/screens/curs.html
+++ b/screens/curs.html
@@ -14,19 +14,19 @@
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- Themify Icons -->
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="../css/themify-icons.css">
     <!-- Owl carousel -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
     <!-- Main css -->
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/partea_de_susLogo.png"/>
+    <link href="../css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/partea_de_susLogo.png"/>
     <!-- jQuery and Bootstrap -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- Plugins JS -->
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
     <!-- Custom JS -->
 
 </head>
@@ -39,10 +39,10 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-dark navbar-expand-lg">
-                    <a class="navbar-brand" href="index.html"><img src="images/partea_de_susLogo.png" height="43" width="43" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                    <a class="navbar-brand" href="../index.html"><img src="../images/partea_de_susLogo.png" height="43" width="43" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                     <div class="collapse navbar-collapse" id="navbar">
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item"> <a class="nav-link active" href="index.html">HOME <span class="sr-only">(current)</span></a> </li>
+                            <li class="nav-item"> <a class="nav-link active" href="../index.html">HOME <span class="sr-only">(current)</span></a> </li>
                         </ul>
                     </div>
                 </nav>
@@ -55,7 +55,7 @@
     <div class="container mt-5">
         <h1 class="textClass"> Mesaj 1 (eu zic moto)</h1>
     </div>
-    <div class="img-holder mt-3"><img src="images/logo_partea_deJos.png" alt="phone" class="img-fluid">
+    <div class="img-holder mt-3"><img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
         <p class="textClass">Mesaj 2 De ce am creat asta? O intrebare de genu</p>
     </div>
 
