--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Mobland - Mobile App Landing Page Template">
     <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
     <!-- Font -->
+
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
      <!-- Bootstrap CSS -->
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="css/themify-icons.css">
     <!-- Owl carousel -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/teamStyle.css">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -131,7 +133,35 @@
     </div>
 
 
-        <div class="container  embed-responsive" >
+        <div class="container   embed-responsive">
+            <div class="section-title">
+                <small>Speak Programming</small>
+                <h3>Trainers</h3>
+            </div>
+            <div class="contentTem">
+                <div class="divNewTeam testimonials-single">
+                    <img src="images/client.png" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
+                    <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
+                    <h5 class="mt-4 mb-2">Crystal Gordon</h5>
+                    <a href="#" class="btn btn-light"> <i class="fa fa-linkedin-square" style="font-size:36px; color:black"></i>  </a>
+                </div>
+                <div class="divNewTeam testimonials-single">
+                    <img src="images/client.png" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
+                    <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
+                    <h5 class="mt-4 mb-2">Crystal Gordon</h5>
+                    <a href="#" class="btn btn-light"> <i class="fa fa-linkedin-square" style="font-size:36px; color:black"></i>  </a>
+                </div>
+                <div class="divNewTeam testimonials-single">
+                    <img src="images/client.png" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
+                    <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
+                    <h5 class="mt-4 mb-2">Crystal Gordon</h5>
+                    <a href="#" class="btn btn-light"> <i class="fa fa-linkedin-square" style="font-size:36px; color:black"></i>  </a>
+                </div>
+            </div>
+        </div>
+
+
+        <!--       <div class="container  embed-responsive" >
             <div class="row text-center">
                 <div class="col-md-12">
                     <div class="sec-title descTrainers" >
@@ -168,7 +198,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
 
 
     <div class="section bg-gradient" id ="aboutUS">
@@ -179,7 +209,6 @@
                 <h2>Download Anywhere</h2>
                 <p class="tagline">Available for all major mobile and desktop platforms. Rapidiously visualize optimal ROI rather than enterprise-wide methods of empowerment. </p>
                 <div class="my-4">
-
                     <a href="#" class="btn btn-light"><img src="images/appleicon.png" alt="icon"> App Store</a>
                     <a href="#" class="btn btn-light"><img src="images/playicon.png" alt="icon"> Google play</a>
                 </div>
@@ -255,7 +284,6 @@
     <footer class="my-5 text-center">
         <!-- Copyright removal is not prohibited! -->
         <p class="mb-2"><small>COPYRIGHT © 2017. ALL RIGHTS RESERVED. MOBAPP TEMPLATE BY <a href="https://colorlib.com">COLORLIB</a></small></p>
-
         <small>
             <a href="#" class="m-2">PRESS</a>
             <a href="#" class="m-2">TERMS</a>
