--- a/screens/curs.html
+++ b/screens/curs.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Mobland - Mobile App Landing Page Template">
     <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
-
     <!-- Font -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <!-- Bootstrap CSS -->
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../css/themify-icons.css">
     <!-- Owl carousel -->
     <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/cursStyle.css">
     <!-- Main css -->
     <link href="../css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="../images/partea_de_susLogo.png"/>
@@ -53,10 +54,90 @@
 
 <header  id="home">
     <div class="container mt-5">
-        <h1 class="textClass"> Mesaj 1 (eu zic moto)</h1>
+        <h2 class="textClass" id="cursTitle">Java-Script Basics</h2>
     </div>
-    <div class="img-holder mt-3"><img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
-        <p class="textClass">Mesaj 2 De ce am creat asta? O intrebare de genu</p>
+    <div>
+        <h4 class="textClass">Vino sa dram drumul primei noastre aplicatii</h4>
+       <br>
+        <button type="button" class="btn btn-dark">Inscire-te</button>
+    </div>
+    <div class="contentInfoCurs">
+    <div class="container mt-5">
+        <div style="margin-top: 50px">
+              <h4 class="textClass">Inforamtii despre cursul into in web development</h4>
+        </div>
+    </div>
+     <div class="divInfoCurs" >
+         <div class="detaliiCurs">
+             <div>
+             <p >Informatii Curs</p>
+             </div>
+             <div class="divContentLabel">
+                 <p class="textOffset"> Nivel  </p>
+                 <p class="textOffset"> Data start</p>
+                 <p class="textOffset"> Durata </p>
+                 <p class="textOffsetBig"> Investitie </p>
+                 <p class="textOffset"> Traineri </p>
+             </div>
+             <div class="divCintentText">
+                 <p class="textOffset"> Introducere </p>
+                 <p class="textOffset"> Mar 5,2019 <i class="far fa-calendar-alt"></i></p>
+                 <p class="textOffset"> 4 luni </p>
+                 <p class="textOffset"> 5 ore/saptamana </p>
+                 <p class="textOffset"> 80 de ore</p>
+                 <p class="textOffset"> 1500 RON</p>
+                 <p class="textOffset"> Rosu Catalin <i href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/" class="fab fa-linkedin"></i></p>
+                 <p class="textOffset"> Pausan Ionut <i class="fab fa-linkedin"></i></p>
+             </div>
+         </div>
+         <div class="descriereCurs">
+             <div class="contentDescCurs">
+                    <p class="textOffset">Pentru cine facem acest curs</p>
+                    <p> Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
+                    <p class="textOffset"> Desciere</p>
+                    <p>Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci secole, dar şi a facut saltul în tipografia electronică practic neschimbată. A fost popularizată în anii '60 odată cu ieşirea colilor Letraset care conţineau pasaje Lorem Ipsum, iar mai recent, prin programele de publicare pentru calculator, ca Aldus PageMaker care includeau versiuni de Lorem Ipsum.</p>
+             </div>
+         </div>
+     </div>
+ </div>
+    <div class="DescriereTrainer">
+        <div>
+            <h3> Traineri Web Development</h3>
+        </div>
+        <div class="contentTrainerDetails">
+            <div class="team-box-trainer">
+                <div class="team-img">
+                    <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
+                </div>
+                <div class="team-title-trainer ">
+                    <h3>Ionut Pausan</h3>
+                </div>
+            </div>
+            <div class="descriereTrainer">
+                <p class="textOffset">Descriere trainer</p>
+                <p> Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
+                <div class="repetClassStyle"><span>2 ani experienta</span></div>
+                <div class="repetClassStyle"><span>linkedin</span></div>
+                <div class="repetClassStyle" ><span>2 ani experienta</span></div>
+            </div>
+        </div>
+        <div class="contentTrainerDetails">
+            <div class="team-box-trainer">
+                <div class="team-img">
+                    <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
+                </div>
+                <div class="team-title-trainer ">
+                    <h3>Ionut Pausan</h3>
+                </div>
+            </div>
+            <div class="descriereTrainer">
+                <p class="textOffset">Descriere trainer</p>
+                <p> Acest curs iti va arata ca si tu poti construi aplicatii web chiar daca nu ai experienta in domeniul tehnic.<br> De ce ai nevoie este de o motivatie puternica,gandire  logica si cacaturi </p>
+                <div class="repetClassStyle"><span>2 ani experienta</span></div>
+                <div class="repetClassStyle"><span>linkedin</span></div>
+                <div class="repetClassStyle" ><span>2 ani experienta</span></div>
+            </div>
+        </div>
     </div>
 
 </header>
