change href to coures page

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -25,7 +25,7 @@
 
     <!-- Main css -->
     <link href="../css/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/partea_de_susLogo.png"/>
+    <link rel="shortcut icon" href="../images/partea_de_susLogo.png"/>
     <!-- jQuery and Bootstrap -->
     <script src="../js/jquery-3.2.1.min.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
@@ -91,7 +91,7 @@
                         <div class="list-group-item"><del>Reports and analytics</del></div>
                     </ul>
                     <div class="card-body">
-                        <a href="screens/curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
+                        <a href="../detaliiCurs/views/detalii-curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
                 </div>
                 <div class="card pricing">
@@ -107,7 +107,7 @@
                         <div class="list-group-item">Reports and analytics</div>
                     </ul>
                     <div class="card-body">
-                        <a href="screens/curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
+                        <a href="../detaliiCurs/views/detalii-curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
                 </div>
                 <div class="card pricing">
@@ -123,7 +123,7 @@
                         <div class="list-group-item">Web hooks</div>
                     </ul>
                     <div class="card-body">
-                        <a href="screens/curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
+                        <a href="../detaliiCurs/views/detalii-curs.html" class="btn btn-primary btn-lg btn-block">Choose this Plan</a>
                     </div>
                 </div>
             </div>
