--- a/home-page/index.html
+++ b/home-page/index.html
@@ -7,8 +7,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mobland - Mobile App Landing Page Template">
-    <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
+    <meta name="description" content="Speak programming description page">
+    <meta name="keywords" content="HTML5, CSS, CSS3, Java-script, GIT, WEB DEVELOPMENT, programare, IT, acreditare, cariera">
     <!-- Font -->
 
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -16,9 +16,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- Themify Icons -->
     <link rel="stylesheet" href="../css/themify-icons.css">
-    <!-- Owl carousel -->
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/teamStyle.css">
+
     <link rel="stylesheet" href="../detaliiCurs/css/detalii-curs.css">
     <link rel="stylesheet" href="./home.css">
 
@@ -29,26 +27,17 @@
     <!-- Main css -->
     <link href="../css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="../images/partea_de_susLogo.png"/>
-    <!-- jQuery and Bootstrap -->
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <!-- Plugins JS -->
-    <script src="../js/owl.carousel.min.js"></script>
-    <!-- Custom JS -->
-    <script src="../js/script.js"></script>
-    <script src="../js/fbLogin.js"></script>
-
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="30">
 
     <!-- NAV BAR START-->
     <div class="nav-menu fixed-top">
-        <div class="container">
+        <div class="nav-bar-container">
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html"><img src="../images/head.png" height="43" width="43" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                        <a class="navbar-brand" href="index.html"><img src="../images/head.png" height="70" width="70" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
@@ -63,11 +52,18 @@
          </div>
     </div>
 <!-- NAV BAR END -->
+
+<!-- DETALII CURS -->
+
+<div class="detalii-curs-container"></div>
+
+<!-- DETALII CURS END -->
+
     <!-- START HEADER -->
     <header  id="home" class="home-header">
-        <div class="">
+        <!-- <div class="">
             <img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
-        </div>
+        </div> -->
         <div class="container take-action-message">
             <h1 class="textClass text-center home-main-header">Putem invata impreuna unii de la ceilalti.</h1>
             <p class="">Vino la cursurile noastre sa invatam impreuna.</p>
@@ -80,64 +76,52 @@
     </header>
 
     <!-- END HEADER -->
-
-    <!-- SECTIUNE DESPRE NOI START -->
-
-    <!-- DESPRE NOI END -->
-
+z
 <!-- SECTIUNE CURSURI START -->
     <div class="section section-home-curs" id="cursuri">
-        <div class="container">
+        <div class="container course">
             <h1 class="text-center home-main-header">Vino si investeste in tine</h1>
-            <div class="card-deck">
-                <div class="card pricing">
-                    <div class="card-head">
-                        <small class="text-primary">FRONTEND INITIERE</small>
-                        <span class="price">379 RON<sub>/4m</sub></span>
-                    </div>
-                    <div class="course-image-container">
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        <div class="list-group-item">Foloseste Html5, Css3, Java-script, JQuery, GIT si invata cum sa construiesti un website de la zero.</div>
-                    </ul>
-                    <div class="card-body">
-                        <a href="screens/curs.html" class="btn btn-primary btn-lg btn-block">Vezi detalii</a>
-                    </div>
-                </div>
-                <div class="card pricing">
-                    <div class="card-head">
-                        <small class="text-primary">INCEPATORI</small>
-                        <span class="price">1500 RON<sub>/4m</sub></span>
-                    </div>
-                    <div class="course-image-container">
-                        </div>
-                    <ul class="list-group list-group-flush">
-                        <div class="list-group-item">Unlimited Projects</div>
-                        <div class="list-group-item">100 GB Storage</div>
-                    </ul>
-                    <div class="card-body">
-                        <a href="screens/curs.html" class="btn btn-primary btn-lg btn-block">Vezi detalii</a>
-                    </div>
-                </div>
-                <div class="card pricing">
-                    <div class="card-head">
-                        <small class="text-primary">BACKEND INITIERE</small>
-                        <span class="price">1500 RON<sub>/4m</sub></span>
-                    </div>
-                    <div class="course-image-container">
-                        </div>
-                    <ul class="list-group list-group-flush">
-                        <div class="list-group-item">Unlimited Projects</div>
-                        <div class="list-group-item">Unlimited Storage</div>
-                    </ul>
-                    <div class="card-body">
-                        <a href="screens/curs.html" class="btn btn-primary btn-lg btn-block">Vezi detalii</a>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 <!-- SECTIUNE CURSURI END -->
+
+<!-- SECTIUNE DESPRE NOI START -->
+
+  <div class="section" id ="aboutUS">
+      <div class="section-despre-noi">
+          <div class="section-despre-noi-content">
+              <header style="color: white">
+                  <h1>WHY CHOOSE US</h1>
+              </header>
+
+              <div style="text-align: center">
+                <div class="section-despre-noi-flex">
+                  <div class="despre-noi-div-descriere margin-div" >
+                      <span class="icon fa-car"></span>
+                      <h3>Cine suntem?</h3>
+                      <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
+                  </div>
+
+                  <div class="despre-noi-div-descriere margin-div">
+                      <span class="icon fa-camera"></span>
+                      <h3>De ce facem asta?</h3>
+                      <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
+                  </div>
+
+                  <div class="despre-noi-div-descriere" >
+                      <span class="icon fa-bug"></span>
+                      <h3>Cum te ajutam?</h3>
+                      <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamc uspendisse amet ullamco</p>
+                  </div>
+
+                </div>
+              </div>
+          </div>
+      </div>
+</div>
+
+
+<!-- DESPRE NOI END -->
 
 
 <!-- SECTIUNE TRAINER START-->
@@ -172,22 +156,6 @@
 
 <!-- SECTIUNE TRAINER END -->
 
-    <div class="section bg-gradient" id ="aboutUS">
-        <div class="container">
-            <div class="call-to-action">
-                <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
-                <h2>Download Anywhere</h2>
-                <p class="tagline">Available for all major mobile and desktop platforms. Rapidiously visualize optimal ROI rather than enterprise-wide methods of empowerment. </p>
-                <div class="my-4">
-                    <a href="#" class="btn btn-light"><img src="../images/appleicon.png" alt="icon"> App Store</a>
-                    <a href="#" class="btn btn-light"><img src="../images/playicon.png" alt="icon"> Google play</a>
-                </div>
-                <p class="text-primary"><small><i>*Works on iOS 10.0.5+, Android Kitkat and above. </i></small></p>
-            </div>
-        </div>
-    </div>
-
-
     <!-- START FOOTER -->
     <footer class="footer">
             <div class="footer-container">
@@ -208,16 +176,27 @@
                     <div class="contact-form">
                         <h1>Email us:</h1>
                         <label for="email">Email</label>
-                        <input type="text" name="email" value="" class="form-control input-lg input-space" placeholder="Your Email"/>
+                        <input type="text" id="email" name="email" value="" class="form-control input-lg input-space" placeholder="Your Email"/>
         
                         <label for="mesaj">Scrie-ne un mesaj</label>
-                        <textarea type="text" name="mesaj" value="" class="input-space form-control input-lg" placeholder="Mesaj..."/></textarea>
+                        <textarea type="text" id="mesaj" name="mesaj" value="" class="input-space form-control input-lg" placeholder="Mesaj..."/></textarea>
                         <button class="btn submit-button-footer">Submit</button>
                     </div>
                 </div>
                 <p class="copyright-message text-center"><small>COPYRIGHT © 2017. ALL RIGHTS RESERVED BY <a href="">SPEAK PROGRAMMING</a></small></p>
             </div>
         </footer>
-</body>
 
+
+        <!-- SCRIPT SECTION -->
+        <script src="../js/jquery-3.2.1.min.js"></script>
+        <script src="../js/bootstrap.bundle.min.js"></script>
+        
+        <script src="../js/makeRekuest.js"></script>
+        <script src="../js/createBodyRequest.js"></script>
+        <script src="./js/home-service.js"></script>
+        <script src="../detaliiCurs/js/detalii-curs-service.js"></script>
+        <script src="./js/home-ui.js"></script>
+        <script src="./js/home.js"></script>
+    </body>
 </html>
