--- a/home-page/index.html
+++ b/home-page/index.html
@@ -10,13 +10,14 @@
     <meta name="description" content="Speak programming description page">
     <meta name="keywords" content="HTML5, CSS, CSS3, Java-script, GIT, WEB DEVELOPMENT, programare, IT, acreditare, cariera">
     <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
      <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- Themify Icons -->
     <link rel="stylesheet" href="../css/themify-icons.css">
-
+    <link rel="stylesheet" href="../css/constants.css">
     <link rel="stylesheet" href="../detaliiCurs/css/detalii-curs.css">
     <link rel="stylesheet" href="./home.css">
 
@@ -42,7 +43,7 @@
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#cursuri">CURSURI</a> </li>
-                                <li class="nav-item"> <a class="nav-link" href="#aboutUS">DESPRE NOI</a> </li>
+                                <li class="nav-item"> <a class="nav-link" href="#despre-noi">DESPRE NOI</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
                             </ul>
                         </div>
@@ -70,54 +71,51 @@
         </div>
         <div class="detalii-curs-button-container">
             <button type="button" class="btn enroll-header-btn">
-                <a class="btn-lg" href="#enroll-form">INSCRIE-TE</a>
+                <a class="btn-lg" href="#cursuri">INSCRIE-TE</a>
             </button>
         </div>
     </header>
 
     <!-- END HEADER -->
-z
+
 <!-- SECTIUNE CURSURI START -->
     <div class="section section-home-curs" id="cursuri">
         <div class="container course">
             <h1 class="text-center home-main-header">Vino si investeste in tine</h1>
+            <div class=" course course1"></div>
         </div>
     </div>
 <!-- SECTIUNE CURSURI END -->
 
 <!-- SECTIUNE DESPRE NOI START -->
 
-  <div class="section" id ="aboutUS">
-      <div class="section-despre-noi">
-          <div class="section-despre-noi-content">
-              <header style="color: white">
-                  <h1>WHY CHOOSE US</h1>
-              </header>
-
-              <div style="text-align: center">
-                <div class="section-despre-noi-flex">
-                  <div class="despre-noi-div-descriere margin-div" >
-                      <span class="icon fa-car"></span>
-                      <h3>Cine suntem?</h3>
-                      <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
-                  </div>
-
-                  <div class="despre-noi-div-descriere margin-div">
-                      <span class="icon fa-camera"></span>
-                      <h3>De ce facem asta?</h3>
-                      <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
-                  </div>
-
-                  <div class="despre-noi-div-descriere" >
-                      <span class="icon fa-bug"></span>
-                      <h3>Cum te ajutam?</h3>
-                      <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamc uspendisse amet ullamco</p>
-                  </div>
-
+<div class="section-about-us" id="despre-noi">
+    <div class="section-despre-noi">
+        <div class="section-despre-noi-content">
+            <div class="container">
+                <h1 class="text-center why-us-header">DE CE NOI?</h1>
+            </div>
+            <div class="section-despre-noi-flex">
+                <div class="despre-noi-div-descriere" >
+                    <span class="why-us-icon fa fa-car"></span>
+                    <h3>Cine suntem?</h3>
+                    <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
                 </div>
-              </div>
-          </div>
-      </div>
+
+                <div class="despre-noi-div-descriere">
+                    <span class="why-us-icon fa fa-camera"></span>
+                    <h3>De ce facem asta?</h3>
+                    <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
+                </div>
+
+                <div class="despre-noi-div-descriere despre-noi-div-descriere-last" >
+                    <span class="why-us-icon fa fa-bug"></span>
+                    <h3>Cum te ajutam?</h3>
+                    <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamc uspendisse amet ullamco</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
@@ -134,20 +132,24 @@ z
                         <div class="card-head">
                             <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
                         </div>
-                        <blockquote class="blockquote text-center">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
+                        <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
                         <ul class="list-group list-group-flush">
                             <h5 class="mt-4 mb-2 text-center">Pausan Ionut</h5>
-                            <a target="_blank" href="https://www.linkedin.com/in/ionut-adrian-pausan-3a7300137/" class="btn"> <i class="fa fa-linkedin-square" style="font-size:40px; color:#0077B5"></i>  </a>
+                            <a class="linkedin-icon-container" target="_blank" href="https://www.linkedin.com/in/ionut-adrian-pausan-3a7300137/" > 
+                                <i class="fa fa-linkedin-square"></i> 
+                            </a>
                         </ul>
                     </div>
                     <div class="card pricing">
                             <div class="card-head">
                                 <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
                             </div>
-                            <blockquote class="blockquote text-center ">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
+                            <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
                             <ul class="list-group list-group-flush">
                                 <h5 class="mt-4 mb-2 text-center">Rosu Catalin</h5>
-                                <a target="_blank" href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/" class="btn"> <i class="fa fa-linkedin-square" style="font-size:40px; color:#0077B5"></i>  </a>
+                                <a target="_blank" href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/" class="linkedin-icon-container">
+                                     <i class="fa fa-linkedin-square"></i>  
+                                    </a>
                             </ul>
                         </div>
                 </div>
@@ -161,7 +163,7 @@ z
             <div class="footer-container">
                 <div class="footer-row">
                     <div class="social-media">
-                        <h1>Contacteaza-ne pe:</h1>
+                        <h1>Contact:</h1>
                         <p class="social-media-paragraph">Speak programming: 
                             <span>contact@speakprogramming.ro</span>
                         </p>
@@ -170,16 +172,18 @@ z
                         </p>
                         <div class="social-media-icons">
                         </div>
-                        <p>Adresa</p>
+                        <!-- <p>Adresa</p> -->
                     </div>
         
-                    <div class="contact-form">
+                    <div id="contact" class="contact-form">
                         <h1>Email us:</h1>
                         <label for="email">Email</label>
-                        <input type="text" id="email" name="email" value="" class="form-control input-lg input-space" placeholder="Your Email"/>
+                        <input type="text" name="email" value="" class="form-control input-lg input-space email-input" placeholder="Your Email"/>
+                        <p class="email-after-submit"></p>
         
                         <label for="mesaj">Scrie-ne un mesaj</label>
-                        <textarea type="text" id="mesaj" name="mesaj" value="" class="input-space form-control input-lg" placeholder="Mesaj..."/></textarea>
+                        <textarea type="text" name="mesaj" value="" class="input-space form-control input-lg mesaj-input" placeholder="Mesaj..."/></textarea>
+                        <p class="message-after-submit"></p>
                         <button class="btn submit-button-footer">Submit</button>
                     </div>
                 </div>
@@ -197,6 +201,7 @@ z
         <script src="./js/home-service.js"></script>
         <script src="../detaliiCurs/js/detalii-curs-service.js"></script>
         <script src="./js/home-ui.js"></script>
+        <script src ="../detaliiCurs/js/formValidation.js"></script>
         <script src="./js/home.js"></script>
     </body>
 </html>
