--- a/home-page/index.html
+++ b/home-page/index.html
@@ -66,7 +66,7 @@
             <img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
         </div> -->
         <div class="container take-action-message">
-            <h1 class="textClass text-center home-main-header">Putem invata impreuna unii de la ceilalti test.</h1>
+            <h1 class="textClass text-center home-main-header">Putem invata impreuna unii de la ceilalti test 23412412.</h1>
             <p class="">Vino la cursurile noastre sa invatam impreuna.</p>
         </div>
         <div class="detalii-curs-button-container">
