--- a/home-page/index.html
+++ b/home-page/index.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html"><img src="../images/head.png" height="70" width="70" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                        <a class="navbar-brand" href="index.html"><img src="../images/head.png" height="60" width="60" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
@@ -66,7 +66,7 @@
             <img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
         </div> -->
         <div class="container take-action-message">
-            <h1 class="textClass text-center home-main-header">Putem invata impreuna unii de la ceilalti test 23412412 safsafsa.</h1>
+            <h1 class="textClass text-center home-main-header">Putem invata impreuna unii de la ceilalti.</h1>
             <p class="">Vino la cursurile noastre sa invatam impreuna.</p>
         </div>
         <div class="detalii-curs-button-container">
