--- a/home-page/index.html
+++ b/home-page/index.html
@@ -24,6 +24,8 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+
 
     <!-- Main css -->
     <link href="../css/style.css" rel="stylesheet">
@@ -38,10 +40,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <nav class="navbar navbar-dark navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html"><img src="../images/head.png" height="60" width="60" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                        <a class="navbar-brand" href="index.html"><img src="../images/head.png" height="50" width="50" class="img-fluid" alt="logo"></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
+                                <li class="nav-item"> <a class="nav-link active" href="#home">ACASĂ <span class="sr-only">(current)</span></a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#cursuri">CURSURI</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#despre-noi">DESPRE NOI</a> </li>
                                 <li class="nav-item"> <a class="nav-link" href="#contact">CONTACT</a> </li>
@@ -66,12 +68,12 @@
             <img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
         </div> -->
         <div class="container take-action-message">
-            <h1 class="textClass text-center home-main-header">Putem invata impreuna unii de la ceilalti.</h1>
+            <h1 class="textClass text-center home-main-header">Putem învăța impreună unii de la ceilalți.</h1>
             <p class="">Vino la cursurile noastre sa invatam impreuna.</p>
         </div>
         <div class="detalii-curs-button-container">
             <button type="button" class="btn enroll-header-btn">
-                <a class="btn-lg" href="#cursuri">INSCRIE-TE</a>
+                <a class="btn-lg" href="#cursuri">ÎNSCRIE-TE</a>
             </button>
         </div>
     </header>
@@ -81,7 +83,7 @@
 <!-- SECTIUNE CURSURI START -->
     <div class="section section-home-curs" id="cursuri">
         <div class="container course">
-            <h1 class="text-center home-main-header">Vino si investeste in tine</h1>
+            <h1 class="text-center home-main-header">Vino sa înveți:</h1>
             <div class=" course course1"></div>
         </div>
     </div>
@@ -96,21 +98,21 @@
                 <h1 class="text-center why-us-header">DE CE NOI?</h1>
             </div>
             <div class="section-despre-noi-flex">
-                <div class="despre-noi-div-descriere" >
-                    <span class="why-us-icon fa fa-car"></span>
+                <div class="despre-noi-div-descriere">
+                    <span class="why-us-icon fas fa-fingerprint"></span>
                     <h3>Cine suntem?</h3>
                     <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
                 </div>
 
                 <div class="despre-noi-div-descriere">
-                    <span class="why-us-icon fa fa-camera"></span>
+                    <span class="why-us-icon fas fa-hands-helping"></span>
                     <h3>De ce facem asta?</h3>
                     <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
                 </div>
 
                 <div class="despre-noi-div-descriere despre-noi-div-descriere-last" >
-                    <span class="why-us-icon fa fa-bug"></span>
-                    <h3>Cum te ajutam?</h3>
+                    <span class="why-us-icon fas fa-tasks"></span>
+                    <h3>Cum te ajutăm?</h3>
                     <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamc uspendisse amet ullamco</p>
                 </div>
             </div>
@@ -126,7 +128,7 @@
 
 <div class="section section-home-trainer">
         <div class="container">
-                <h1 class="text-center home-main-header">Cu cine vei colabora</h1>
+                <h1 class="text-center home-main-header">Cu cine vei colabora?</h1>
                 <div class="card-deck">
                     <div class="card pricing">
                         <div class="card-head">
@@ -134,9 +136,9 @@
                         </div>
                         <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
                         <ul class="list-group list-group-flush">
-                            <h5 class="mt-4 mb-2 text-center">Pausan Ionut</h5>
+                            <h5 class="mt-4 mb-2 text-center">Păușan Ionuț</h5>
                             <a class="linkedin-icon-container" target="_blank" href="https://www.linkedin.com/in/ionut-adrian-pausan-3a7300137/" > 
-                                <i class="fa fa-linkedin-square"></i> 
+                                <i class="fab fa-linkedin"></i>
                             </a>
                         </ul>
                     </div>
@@ -146,9 +148,9 @@
                             </div>
                             <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
                             <ul class="list-group list-group-flush">
-                                <h5 class="mt-4 mb-2 text-center">Rosu Catalin</h5>
+                                <h5 class="mt-4 mb-2 text-center">Roșu Cătălin</h5>
                                 <a target="_blank" href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/" class="linkedin-icon-container">
-                                     <i class="fa fa-linkedin-square"></i>  
+                                     <i class="fab fa-linkedin"></i>
                                     </a>
                             </ul>
                         </div>
@@ -172,7 +174,7 @@
                         </p>
                         <div class="social-media-icons">
                         </div>
-                        <!-- <p>Adresa</p> -->
+                        <i class="fab fa-facebook-square"></i>
                     </div>
         
                     <div id="contact" class="contact-form">
