Ionut last modifications

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -24,11 +24,8 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-=======
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
->>>>>>> 836723c09cbf4acabf9efe359730da9be7aa6b8f
+
 
 
     <!-- Main css -->
@@ -72,8 +69,8 @@
             <img src="../images/logo_partea_deJos.png" alt="phone" class="img-fluid">
         </div> -->
         <div class="container take-action-message">
-            <h1 class="textClass text-center home-main-header">Putem învăța impreună unii de la ceilalți.</h1>
-            <p class="">Vino la cursurile noastre sa invatam impreuna.</p>
+            <h1 class="textClass text-center home-main-header"></h1>
+            <p class="home-main-sub-header">Vino la cursurile noastre sa invatam impreuna.</p>
         </div>
         <div class="detalii-curs-button-container">
             <button type="button" class="btn enroll-header-btn">
@@ -87,7 +84,7 @@
 <!-- SECTIUNE CURSURI START -->
     <div class="section section-home-curs" id="cursuri">
         <div class="container course">
-            <h1 class="text-center home-main-header">Vino sa înveți:</h1>
+            <h1 class="text-center home-main-header courseHeader">Vino sa înveți:</h1>
             <div class=" course course1"></div>
         </div>
     </div>
@@ -99,25 +96,25 @@
     <div class="section-despre-noi">
         <div class="section-despre-noi-content">
             <div class="container">
-                <h1 class="text-center why-us-header">DE CE NOI?</h1>
+                <h1 class="text-center why-us-header"></h1>
             </div>
             <div class="section-despre-noi-flex">
                 <div class="despre-noi-div-descriere">
                     <span class="why-us-icon fas fa-fingerprint"></span>
-                    <h3>Cine suntem?</h3>
-                    <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
+                    <h3 class="whoWeAre"></h3>
+                    <p class="despre-noi-text-descriere descriere-who-we-are"></p>
                 </div>
 
                 <div class="despre-noi-div-descriere">
                     <span class="why-us-icon fas fa-hands-helping"></span>
-                    <h3>De ce facem asta?</h3>
-                    <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamcoSuspendisse amet ullamco</p>
+                    <h3 class="whyWeDoThis"></h3>
+                    <p class="despre-noi-text-descriere descriere-why"></p>
                 </div>
 
                 <div class="despre-noi-div-descriere despre-noi-div-descriere-last" >
                     <span class="why-us-icon fas fa-tasks"></span>
-                    <h3>Cum te ajutăm?</h3>
-                    <p class="despre-noi-text-descriere">Suspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamcoSuspendisse amet ullamco Suspendisse amet ullamc uspendisse amet ullamco</p>
+                    <h3 class="howWeDoThis"></h3>
+                    <p class="despre-noi-text-descriere howWeDoThisParagraph"></p>
                 </div>
             </div>
         </div>
@@ -138,15 +135,13 @@
                         <div class="card-head">
                             <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
                         </div>
-                        <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
+                        <blockquote class="blockquote trainerIon"></blockquote>
                         <ul class="list-group list-group-flush">
                             <h5 class="mt-4 mb-2 text-center">Păușan Ionuț</h5>
                             <a class="linkedin-icon-container" target="_blank" href="https://www.linkedin.com/in/ionut-adrian-pausan-3a7300137/" > 
-<<<<<<< HEAD
+
                                 <i class="fab fa-linkedin"></i>
-=======
-                                <i class="fab fa-linkedin"></i> 
->>>>>>> 836723c09cbf4acabf9efe359730da9be7aa6b8f
+
                             </a>
                         </ul>
                     </div>
@@ -154,15 +149,12 @@
                             <div class="card-head">
                                 <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136" height="136">
                             </div>
-                            <blockquote class="blockquote">Uniquely streamline highly efficient scenarios and 24/7 initiatives. Conveniently embrace multifunctional ideas through proactive customer service. Distinctively conceptualize 2.0 intellectual capital via user-centric partnerships.</blockquote>
+                            <blockquote class="blockquote trainerCata"></blockquote>
                             <ul class="list-group list-group-flush">
                                 <h5 class="mt-4 mb-2 text-center">Roșu Cătălin</h5>
                                 <a target="_blank" href="https://www.linkedin.com/in/ro%C8%99u-c%C4%83t%C4%83lin-dorin-872322112/" class="linkedin-icon-container">
-<<<<<<< HEAD
+
                                      <i class="fab fa-linkedin"></i>
-=======
-                                     <i class="fab fa-linkedin"></i>  
->>>>>>> 836723c09cbf4acabf9efe359730da9be7aa6b8f
                                     </a>
                             </ul>
                         </div>
@@ -209,7 +201,8 @@
         <!-- SCRIPT SECTION -->
         <script src="../js/jquery-3.2.1.min.js"></script>
         <script src="../js/bootstrap.bundle.min.js"></script>
-        
+
+        <script src="../js/app.config.js"></script>
         <script src="../js/makeRekuest.js"></script>
         <script src="../js/createBodyRequest.js"></script>
         <script src="./js/home-service.js"></script>
