--- a/home-page/index.html
+++ b/home-page/index.html
@@ -73,7 +73,7 @@
     </div> -->
     <div class="container take-action-message">
         <h1 class="textClass text-center home-main-header"></h1>
-        <p class="home-main-sub-header">Vino la cursurile noastre sa invatam impreuna.</p>
+        <p class="home-main-sub-header"></p>
     </div>
     <div class="detalii-curs-button-container">
         <button type="button" class="btn enroll-header-btn">
@@ -88,7 +88,7 @@
 
 <div class="section section-home-curs" id="cursuri">
     <div class="container course">
-        <h1 class="text-center home-main-header courseHeader">Vino sa înveți:</h1>
+        <h1 class="text-center home-main-header courseHeader"></h1>
         <div class=" course course1"></div>
     </div>
 </div>
@@ -133,7 +133,7 @@
 
 <div class="section section-home-trainer">
     <div class="container">
-        <h1 class="text-center home-main-header">Cu cine vei colabora?</h1>
+        <h1 class="text-center home-main-header colaboratori"></h1>
         <div class="card-deck">
             <div class="card pricing">
                 <div class="card-head">
@@ -153,7 +153,7 @@
             </div>
             <div class="card pricing">
                 <div class="card-head">
-                    <img src="../images/pozaIonutPausan.jpg" class="rounded-circle" alt="Cinque Terre" width="136"
+                    <img src="../images/cataRosuResize.jpg" class="rounded-circle" alt="Cinque Terre" width="136"
                          height="136">
                 </div>
                 <blockquote class="blockquote trainerCata"></blockquote>
